make content 100% width and encased everything in a .tutorial class

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-	<div id="container">
+	<div id="container" class="tutorial">
 		<div id="header">
 			<a href="#" class="menu header-btn" id="toggle-toc"></a>
 			<h1>Up and Running with Angular Workshop</h1>
