--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
 
 <body>
 
-	<div id="container" class="tutorial">
+	<div id="tutorial-container">
 		<div id="header">
 			<a href="#" class="menu header-btn" id="toggle-toc"></a>
 			<h1>Up and Running with Angular Workshop</h1>
 			<a href="https://github.com/digitaldrummerj/angular-tutorial" class="github header-btn"></a>
 		</div>
-		<div id="content-container">
+		<div id="tutorial-content-container">
 			<div id="toc">
 				<div class="toc-heading">Table of Contents</div>
 				<div id="toc-padding"></div>
