--- a/src/index.html
+++ b/src/index.html
@@ -29,15 +29,15 @@
 			</div>
 			<div id="book">
 				<div class="chapter">
-					@@include(markdown("chapters/chapter00-intro.md"))
+					@@include(markdown("chapters/chapter01-intro.md"))
 				</div>
 				<hr>
 				<div class="chapter">
-					@@include(markdown("chapters/chapter01-software-install.md"))
+					@@include(markdown("chapters/chapter02-software-install.md"))
 				</div>
 				<hr>
 				<div class="chapter">
-					@@include(markdown("chapters/chapter02-new-project.md"))
+					@@include(markdown("chapters/chapter03-new-project.md"))
 				</div>
 
 				<hr>
@@ -47,36 +47,36 @@
 				<hr>
 
 				<div class="chapter">
-					@@include(markdown("chapters/chapter08_1-template-forms.md"))
+					@@include(markdown("chapters/chapter05-template-forms.md"))
 				</div>
 				<hr>
 
 				<div class="chapter">
-					@@include(markdown("chapters/chapter08_2-reactive-forms.md"))
+					@@include(markdown("chapters/chapter06-reactive-forms.md"))
 				</div>
 				<hr>
 				<div class="chapter">
-					@@include(markdown("chapters/chapter11-lockdown-routes.md"))
-				</div>
-
-				<hr>
-				<div class="chapter">
-					@@include(markdown("chapters/chapter05-environments.md"))
+					@@include(markdown("chapters/chapter07-lockdown-routes.md"))
 				</div>
 
 				<hr>
 				<div class="chapter">
-					@@include(markdown("chapters/chapter10-route-not-found.md"))
+					@@include(markdown("chapters/chapter08-environments.md"))
 				</div>
 
 				<hr>
 				<div class="chapter">
-					@@include(markdown("chapters/chapter06-header-footer.md"))
+					@@include(markdown("chapters/chapter09-default-route.md"))
+				</div>
+
+				<hr>
+				<div class="chapter">
+					@@include(markdown("chapters/chapter10-header-footer.md"))
 				</div>
 	
 				<hr>
 				<div class="chapter">
-					@@include(markdown("chapters/chapter99-deploy.md"))
+					@@include(markdown("chapters/chapter11-deploy.md"))
 				</div>
 				
 				<hr>
@@ -95,10 +95,10 @@
 				</div>
 
 				<hr>
-				<div class="chapter">
+				<!--<div class="chapter">
 					@@include(markdown("../tags.md"))
 				</div>
-				<hr>
+				<hr>-->
 			</div>
 		</div>
 	</div>
