added download of previous chapter code

--- a/index.html
+++ b/index.html
@@ -572,6 +572,31 @@
 <li>Implement input validation</li>
 <li>Submit form values to a service</li>
 </ul>
+<h3 id="code-from-previous-chapter">Code from Previous Chapter</h3>
+<div class="alert alert-danger" role="alert">Skip this section if you completed the previous chapter</div>
+
+<p>If you have not completed the previous chapter you can get the completed code by downloading the code from Github.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Downloading Code 
+</h4>
+
+<ol>
+<li>Downloading and extracting the zip file into your projects folder (c:\projects or ~/projects) at <a href="https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-bootstrap.zip">https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-bootstrap.zip</a> </li>
+<li><p>After you get the code, run npm install to get all of the NPM dependencies.</p>
+<pre><code class="lang-bash"> npm install
+</code></pre>
+</li>
+<li><p>Open Visual Studio Code</p>
+</li>
+<li>In Visual Studio Code, go under the File menu, select Open folder and navigate to the folder that you unzipped the files into</li>
+<li>If you have ng serve running in a different editor, make sure to stop it from running.</li>
+<li><p>Open the Integrated Terminal in Visual Studio Code (ctrl + `)  and run ng serve</p>
+<pre><code class="lang-bash"> ng serve
+</code></pre>
+</li>
+</ol>
+<div class="exercise-end"></div>
+
 <h3 id="create-login-component">Create Login Component</h3>
 <p>The first thing we need to do is to create our login component using the Angular CLI.  We will use the <code>ng generate component</code> command to do this.  </p>
 <h4 class="exercise-start">
@@ -1228,6 +1253,31 @@
 <li>Implement input validation</li>
 <li>Submit form values to a service</li>
 </ul>
+<h3 id="code-from-previous-chapter">Code from Previous Chapter</h3>
+<div class="alert alert-danger" role="alert">Skip this section if you completed the previous chapter</div>
+
+<p>If you have not completed the previous chapter you can get the completed code by downloading the code from Github.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Downloading Code 
+</h4>
+
+<ol>
+<li>Downloading and extracting the zip file into your projects folder (c:\projects or ~/projects) at <a href="https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-template-forms.zip">https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-template-forms.zip</a> </li>
+<li><p>After you get the code, run npm install to get all of the NPM dependencies.</p>
+<pre><code class="lang-bash"> npm install
+</code></pre>
+</li>
+<li><p>Open Visual Studio Code</p>
+</li>
+<li>In Visual Studio Code, go under the File menu, select Open folder and navigate to the folder that you unzipped the files into</li>
+<li>If you have ng serve running in a different editor, make sure to stop it from running.</li>
+<li><p>Open the Integrated Terminal in Visual Studio Code (ctrl + `)  and run ng serve</p>
+<pre><code class="lang-bash"> ng serve
+</code></pre>
+</li>
+</ol>
+<div class="exercise-end"></div>
+
 <h3 id="create-todo-component">Create Todo Component</h3>
 <h4 class="exercise-start">
     <b>Exercise</b>: Create Todo Component 
@@ -2255,6 +2305,31 @@
 <li>Understand how to protect a route</li>
 <li>Understand how to use a guard</li>
 </ul>
+<h3 id="code-from-previous-chapter">Code from Previous Chapter</h3>
+<div class="alert alert-danger" role="alert">Skip this section if you completed the previous chapter</div>
+
+<p>If you have not completed the previous chapter you can get the completed code by downloading the code from Github.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Downloading Code 
+</h4>
+
+<ol>
+<li>Downloading and extracting the zip file into your projects folder (c:\projects or ~/projects) at <a href="https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-reactive-forms.zip">https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-reactvive-forms.zip</a> </li>
+<li><p>After you get the code, run npm install to get all of the NPM dependencies.</p>
+<pre><code class="lang-bash"> npm install
+</code></pre>
+</li>
+<li><p>Open Visual Studio Code</p>
+</li>
+<li>In Visual Studio Code, go under the File menu, select Open folder and navigate to the folder that you unzipped the files into</li>
+<li>If you have ng serve running in a different editor, make sure to stop it from running.</li>
+<li><p>Open the Integrated Terminal in Visual Studio Code (ctrl + `)  and run ng serve</p>
+<pre><code class="lang-bash"> ng serve
+</code></pre>
+</li>
+</ol>
+<div class="exercise-end"></div>
+
 <h3 id="create-guard">Create Guard</h3>
 <h4 class="exercise-start">
   <b>Exercise</b>: Check If User Is Logged In
@@ -2394,6 +2469,31 @@ canActivate: [IsLoggedInGuard]
 <li>Learn how to change configurations per environment</li>
 <li>Implement environment configurations</li>
 </ul>
+<h3 id="code-from-previous-chapter">Code from Previous Chapter</h3>
+<div class="alert alert-danger" role="alert">Skip this section if you completed the previous chapter</div>
+
+<p>If you have not completed the previous chapter you can get the completed code by downloading the code from Github.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Downloading Code 
+</h4>
+
+<ol>
+<li>Downloading and extracting the zip file into your projects folder (c:\projects or ~/projects) at <a href="https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-lock-down-routes.zip">https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-lock-down-routes.zip</a> </li>
+<li><p>After you get the code, run npm install to get all of the NPM dependencies.</p>
+<pre><code class="lang-bash"> npm install
+</code></pre>
+</li>
+<li><p>Open Visual Studio Code</p>
+</li>
+<li>In Visual Studio Code, go under the File menu, select Open folder and navigate to the folder that you unzipped the files into</li>
+<li>If you have ng serve running in a different editor, make sure to stop it from running.</li>
+<li><p>Open the Integrated Terminal in Visual Studio Code (ctrl + `)  and run ng serve</p>
+<pre><code class="lang-bash"> ng serve
+</code></pre>
+</li>
+</ol>
+<div class="exercise-end"></div>
+
 <h3 id="default-configuration">Default Configuration</h3>
 <p>The src\environments\environment.ts file is the default configurations if no environment is specified when running <code>ng serve</code></p>
 <p>In the environment.ts we need to add the environmentName and apiBaseUrl values.  The apiBaseUrl is the  base url for our API and the environment name is an easy recognizable name for the environment.</p>
@@ -2539,6 +2639,31 @@ environment.local.ts
 <ul>
 <li>Understand how to deal with an unknown route</li>
 </ul>
+<h3 id="code-from-previous-chapter">Code from Previous Chapter</h3>
+<div class="alert alert-danger" role="alert">Skip this section if you completed the previous chapter</div>
+
+<p>If you have not completed the previous chapter you can get the completed code by downloading the code from Github.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Downloading Code 
+</h4>
+
+<ol>
+<li>Downloading and extracting the zip file into your projects folder (c:\projects or ~/projects) at <a href="https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-env-config.zip">https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-env-config.zip</a> </li>
+<li><p>After you get the code, run npm install to get all of the NPM dependencies.</p>
+<pre><code class="lang-bash"> npm install
+</code></pre>
+</li>
+<li><p>Open Visual Studio Code</p>
+</li>
+<li>In Visual Studio Code, go under the File menu, select Open folder and navigate to the folder that you unzipped the files into</li>
+<li>If you have ng serve running in a different editor, make sure to stop it from running.</li>
+<li><p>Open the Integrated Terminal in Visual Studio Code (ctrl + `)  and run ng serve</p>
+<pre><code class="lang-bash"> ng serve
+</code></pre>
+</li>
+</ol>
+<div class="exercise-end"></div>
+
 <h3 id="create-not-found-component">Create Not Found Component</h3>
 <h4 class="exercise-start">
     <b>Exercise</b>: Redirecting User to &quot;Not Found&quot; component
@@ -2597,6 +2722,31 @@ environment.local.ts
 <li>Understand how to include components inside of other components</li>
 <li>Understand how to utilize Bootstrap </li>
 </ul>
+<h3 id="code-from-previous-chapter">Code from Previous Chapter</h3>
+<div class="alert alert-danger" role="alert">Skip this section if you completed the previous chapter</div>
+
+<p>If you have not completed the previous chapter you can get the completed code by downloading the code from Github.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Downloading Code 
+</h4>
+
+<ol>
+<li>Downloading and extracting the zip file into your projects folder (c:\projects or ~/projects) at <a href="https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-default-route.zip">https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-default-route.zip</a> </li>
+<li><p>After you get the code, run npm install to get all of the NPM dependencies.</p>
+<pre><code class="lang-bash"> npm install
+</code></pre>
+</li>
+<li><p>Open Visual Studio Code</p>
+</li>
+<li>In Visual Studio Code, go under the File menu, select Open folder and navigate to the folder that you unzipped the files into</li>
+<li>If you have ng serve running in a different editor, make sure to stop it from running.</li>
+<li><p>Open the Integrated Terminal in Visual Studio Code (ctrl + `)  and run ng serve</p>
+<pre><code class="lang-bash"> ng serve
+</code></pre>
+</li>
+</ol>
+<div class="exercise-end"></div>
+
 <h3 id="create-header-component">Create Header Component</h3>
 <h4 class="exercise-start">
     <b>Exercise</b>: Creating the header component
@@ -2985,6 +3135,31 @@ Note that this will remove the dist directory before build.
 <li>Show how to reset a form</li>
 <li>Show how to a filtered an array and display the count of filtered items</li>
 </ul>
+<h3 id="code-from-previous-chapter">Code from Previous Chapter</h3>
+<div class="alert alert-danger" role="alert">Skip this section if you completed the previous chapter</div>
+
+<p>If you have not completed the previous chapter you can get the completed code by downloading the code from Github.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Downloading Code 
+</h4>
+
+<ol>
+<li>Downloading and extracting the zip file into your projects folder (c:\projects or ~/projects) at <a href="https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-header-footer.zip">https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-header-footer.zip</a> </li>
+<li><p>After you get the code, run npm install to get all of the NPM dependencies.</p>
+<pre><code class="lang-bash"> npm install
+</code></pre>
+</li>
+<li><p>Open Visual Studio Code</p>
+</li>
+<li>In Visual Studio Code, go under the File menu, select Open folder and navigate to the folder that you unzipped the files into</li>
+<li>If you have ng serve running in a different editor, make sure to stop it from running.</li>
+<li><p>Open the Integrated Terminal in Visual Studio Code (ctrl + `)  and run ng serve</p>
+<pre><code class="lang-bash"> ng serve
+</code></pre>
+</li>
+</ol>
+<div class="exercise-end"></div>
+
 <h3 id="displaying-open-item-count">Displaying Open Item Count</h3>
 <p>It would be nice to know how many todo items that the user has and display that in the UI.  </p>
 <p>Requirements:</p>
@@ -3255,6 +3430,31 @@ Note that this will remove the dist directory before build.
 <li>Understand how to create a cookie with user information in it</li>
 <li>Understand how to logout the user </li>
 </ul>
+<h3 id="code-from-previous-chapter">Code from Previous Chapter</h3>
+<div class="alert alert-danger" role="alert">Skip this section if you completed the previous chapter</div>
+
+<p>If you have not completed the previous chapter you can get the completed code by downloading the code from Github.</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Downloading Code 
+</h4>
+
+<ol>
+<li>Downloading and extracting the zip file into your projects folder (c:\projects or ~/projects) at <a href="https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-additional-todo.zip">https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-additional-todo.zip</a> </li>
+<li><p>After you get the code, run npm install to get all of the NPM dependencies.</p>
+<pre><code class="lang-bash"> npm install
+</code></pre>
+</li>
+<li><p>Open Visual Studio Code</p>
+</li>
+<li>In Visual Studio Code, go under the File menu, select Open folder and navigate to the folder that you unzipped the files into</li>
+<li>If you have ng serve running in a different editor, make sure to stop it from running.</li>
+<li><p>Open the Integrated Terminal in Visual Studio Code (ctrl + `)  and run ng serve</p>
+<pre><code class="lang-bash"> ng serve
+</code></pre>
+</li>
+</ol>
+<div class="exercise-end"></div>
+
 <h3 id="caching-user">Caching User</h3>
 <p>Right now when you refresh the page the current user information in the AuthService is lost.  We can cache the data using cookies.  To implement the cookie storage we are going to use the ngx-cookie library.</p>
 <h4 class="exercise-start">
@@ -3499,7 +3699,31 @@ Note that this will remove the dist directory before build.
 
 				<hr>
 				<div class="chapter">
-					<h2 id="thank-you">Thank you</h2>
+					<h3 id="completed-code">Completed Code</h3>
+<p>If you want to get the completed code you can download it from Github</p>
+<h4 class="exercise-start">
+    <b>Exercise</b>: Downloading Code 
+</h4>
+
+<ol>
+<li>Downloading and extracting the zip file into your projects folder (c:\projects or ~/projects) at <a href="https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-additional-login.zip">https://github.com/digitaldrummerj/angular-tutorial-code/archive/chapter-additional-login.zip</a> </li>
+<li><p>After you get the code, run npm install to get all of the NPM dependencies.</p>
+<pre><code class="lang-bash"> npm install
+</code></pre>
+</li>
+<li><p>Open Visual Studio Code</p>
+</li>
+<li>In Visual Studio Code, go under the File menu, select Open folder and navigate to the folder that you unzipped the files into</li>
+<li>If you have ng serve running in a different editor, make sure to stop it from running.</li>
+<li><p>Open the Integrated Terminal in Visual Studio Code (ctrl + `)  and run ng serve</p>
+<pre><code class="lang-bash"> ng serve
+</code></pre>
+</li>
+</ol>
+<div class="exercise-end"></div>
+
+
+<h2 id="thank-you">Thank you</h2>
 <p>I hope that you enjoyed going through this tutorial.  If you have any questions, please hit me up on twitter <a href="https://twitter.com/digitaldrummerj">@digitaldrummerj</a>.  </p>
 
 				</div>
