--- a/index.html
+++ b/index.html
@@ -1776,7 +1776,7 @@
      completed?: boolean,
      createdAt?: Date,
      updatedAt?: Date) {
-     this.id = id ? id : &#39;&#39;;
+     this.id = id;
      this.item = item;
      this.completed = completed ? completed: false;
      this.createdAt = createdAt ? createdAt: new Date();
